# TwitterClawer

./: .gitignore  README.md  add-artist.bat  artists.example.json  first-download.bat  pyproject.toml  repair.bat  update.bat
docs/: index.html
docs/examples/: manifest.example.json
src/twitterclawer/: __init__.py  cli.py  downloader.py  manifest.py  organizer.py  paths.py  repair.py  roster.py  sitegen.py
tests/: test_cli.py  test_downloader.py  test_manifest.py  test_organizer.py  test_repair.py  test_roster.py  test_sitegen.py
